crates/math-core/tests/snapshots/error_test__ampersand_in_gather.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{gather}1&1\\\\1\\end{gather}"
---
Error: Got "&", which may only appear in a table-like environment.
   ╭─[ <input>:1:16 ]
   │
 1 │ \begin{gather}1&1\\1\end{gather}
   │                ┬  
   │                ╰── may only appear in a table-like environment
───╯
